load(
    "@pypi//:requirements.bzl",
    "requirement",
    "data_requirement",
    "dist_info_requirement",
    "entry_point",
)
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
  name = "main",
  srcs = ["main.py"],
  deps = ["//calculator:calculator",
          requirement("Flask"),
  ]
)

alias(
    name = "yamllint",
    actual = entry_point("yamllint")
)

